--- a/202306/01.md
+++ b/202306/01.md
@@ -1,11 +1,11 @@
 # 取り組んだ課題一覧
-- 
+- HTML & CSS 道場レッスン 初級編
 # わかったこと
-- 
+- なし
 # 次やること
-- 
+- Progateの続き
 # 感じたこと
-- 
+- コツがなかなかつかめず
 # 学習時間
-Today:h  
-Total:h
+Today:1.9h  
+Total:5.8h
