--- a/202306/18.md
+++ b/202306/18.md
@@ -1,6 +1,7 @@
 # 取り組んだ課題一覧
 - Ruby on Rails5 IV 道場
 - JavaScript I
+- JavaScript II
 # わかったこと
 - Ruby on Rails5 の基礎文法
 - :の位置がいつも迷う
@@ -11,5 +12,5 @@
 - やっとrails終わった・・・
 - 毎日続ける
 # 学習時間
-Today:2h  
-Total:38.4h
+Today:2.6h  
+Total:39.0h
