--- a/202306/18.md
+++ b/202306/18.md
@@ -2,6 +2,8 @@
 - Ruby on Rails5 IV 道場
 - JavaScript I
 - JavaScript II
+- JavaScript III
+- JavaScript Ⅳ
 # わかったこと
 - Ruby on Rails5 の基礎文法
 - :の位置がいつも迷う
@@ -12,5 +14,5 @@
 - やっとrails終わった・・・
 - 毎日続ける
 # 学習時間
-Today:2.6h  
-Total:39.0h
+Today:3.0h  
+Total:39.4h
