--- a/202307/02.md
+++ b/202307/02.md
@@ -1,9 +1,9 @@
 # 取り組んだ課題一覧
 - udemy:html_css_セクション1,2
 # わかったこと
-- webサイトとはwebページを表示するために必要なファイルを全て収納したフォルダのこと
-- 要素はボックスで囲まれている
-- 間違いやすい点：**widthはボックスの中のコンテンツ幅を表す**
+- webサイトとはwebページを表示するために必要なファイルを全て収納した<ins>**フォルダ**</ins>のこと
+- <ins>**要素はボックスで囲まれている**</ins>
+- 間違いやすい点：<ins>**widthはボックスの中のコンテンツ幅を表す**</ins>
 # 次やること
 - 005.1.1_html_css
 # 感じたこと
