--- a/202307/08.md
+++ b/202307/08.md
@@ -12,7 +12,7 @@
 - (css)floatでも横並びにできるが色々な要素が回り込んだりして面倒なのでflexボックスを使う
 - (html)image src="" alt="" このaltは画像の説明を入れておく（画像が表示されなかった時のため）
 - (html)pは本文を表す
-- (html)"<br>"で改行を表す
+- (html)<br>で改行を表す
 - (css)「margin-left: auto;」で右揃え
 - (css)「text-align: center;」で文字の中央揃え
 - (html)画像にはfigureタグを使う
