--- a/202307/08.md
+++ b/202307/08.md
@@ -21,7 +21,7 @@
 - (css)color: inherit;のようにinheritは親要素を引き継ぐ
 - (css)text-decoration: none;リンクのアンダーラインを消す
 - (css)a:hoverでリンクにマウスを乗せた時の動作を設定する
-- クラウド上のサービにあるフォントを使うことで全てのブラウザで共通のフォントを使用する技術がある
+- クラウド上のサービスにあるフォントを使うことで全てのブラウザで共通のフォントを使用する技術がある
 - そのフォントをWEBフォントと言い、例えばgoogleとadobeがある
 - WEBフォントを使用する場合は開発者のPCにインストールする必要がある
 - (css)gap 20px 3px; 行間（20px）列間（30px）の指定、gridlayout, flexboxの際に使用
