--- a/202307/09.md
+++ b/202307/09.md
@@ -1,6 +1,8 @@
 # 取り組んだ課題一覧
-- udemy:html_css_セクション6
+- udemy:html_css_セクション6, 7
 # わかったこと
+- (css)gapは個別コントロールできないが、grid-template-columns(rows)を調整することによりコントロール可能
+- XDによりプロパティから仕様の確認が可能
 - 
 # 次やること
 - 005.1.1_html_css
