--- a/202307/09.md
+++ b/202307/09.md
@@ -1,13 +1,12 @@
 # 取り組んだ課題一覧
-- udemy:html_css_セクション6, 7
+- udemy:html_css_セクション6
 # わかったこと
 - (css)gapは個別コントロールできないが、grid-template-columns(rows)を調整することによりコントロール可能
-- XDによりプロパティから仕様の確認が可能
-- 
+- XDによりプロパティからWEBページの仕様の確認が可能
 # 次やること
 - 005.1.1_html_css
 # 感じたこと
 - 毎日続ける
 # 学習時間
-Today:3.5h  
-Total:58.7h
+Today:1h  
+Total:59.7h
