--- a/202307/10.md
+++ b/202307/10.md
@@ -3,14 +3,14 @@
 # わかったこと
 - レスポンシブwebデザインとは自動でデバイスに合わせたデザインにする仕組み
 - レスポンシブwebデザインを可能にするにはメディアクエリ、フルードグリッド、フルードイメージの3つの技術が必要
-**メディアクエリ**
+#### メディアクエリ
 - まずは画面が小さいスマホ用から作成してくのがポイント
 - htmlは1つ、css内で各デバイス用の設定を適用する(メディアクエリはhtmlは簡単、cssが複雑になる)
 - (html)< meta name="viewport" content="width=device-width" > スマホの画面でどう表示するかの設定
 - 
-**フルードグリッド**
+#### フルードグリッド
 - 
-**フルードイメージ**
+#### フルードイメージ
 - 
 # 次やること
 - 005.1.1_html_css
