--- a/202307/10.md
+++ b/202307/10.md
@@ -7,7 +7,7 @@
 - まずは画面が小さいスマホ用から作成してくのがポイント
 - htmlは1つ、css内で各デバイス用の設定を適用する(メディアクエリはhtmlは簡単、cssが複雑になる)
 - (html)< meta name="viewport" content="width=device-width" > スマホの画面でどう表示するかの設定
-- 
+- (css)@media screen and (min-width: 375px) {} 画面サイズでの条件設定
 #### フルードグリッド
 - 
 #### フルードイメージ
@@ -17,5 +17,5 @@
 # 感じたこと
 - 毎日続ける
 # 学習時間
-Today:h
-Total:59.7h
+Today:1h
+Total:60.7h
