--- a/202307/16.md
+++ b/202307/16.md
@@ -1,9 +1,10 @@
+# 目安：HC内で1,000時間の学習
 # 取り組んだ課題一覧
 - udemy:html_css_セクション9
 - web技術の基本を学ぶ
 # わかったこと
 - --udemy:html_css_セクション9--
-- N/A
+- 構造化タグとはレイアウトを変えるためだけにHTMLに書き込むタグのこと（divタグ）
 -------------------------
 - --web技術の基本を学ぶ--
 - 基本的操作をブログにまとめた
@@ -13,5 +14,5 @@
 - 毎日続ける
 - ※ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 # 学習時間
-Today:h
-Total:72.8h
+Today:5.5h
+Total:78.3h
