--- a/202307/21.md
+++ b/202307/21.md
@@ -2,6 +2,7 @@
 # 取り組んだ課題一覧
 - udemy:html_css_セクション9
 - udemy:linux_セクション5-6
+- pecoとghqを導入する
 # わかったこと
 - --udemy:html_css_セクション9--
 - N/A
@@ -14,5 +15,5 @@
 - 毎日続ける
 - ※ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 # 学習時間
-Today:h
-Total:83.8h
+Today:1.1h
+Total:84.9h
