--- a/202307/22.md
+++ b/202307/22.md
@@ -1,13 +1,12 @@
 # 目安：HC内で1,000時間の学習
 # 取り組んだ課題一覧
 - udemy:html_css_セクション9
-- --udemy:html_css_セクション9--
-- 
+- N/A
 # 次やること
 - 005.1.1_html_css
 # 感じたこと
 - 毎日続ける
 - ※ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 # 学習時間
-Today:h
-<br>Total:84.9h
+Today:1h
+<br>Total:85.9h
