--- a/202307/23.md
+++ b/202307/23.md
@@ -17,11 +17,15 @@
 - (html)inputタグでの送信ボタンは「type="submit" value="送信" form="id属性で指定したid"」とする
 - (html)inputタグでのリセットボタンは「type="reset" value="リセット" form="id属性で指定したid"」とする
 - (css)右に寄せるには「margin 0 0 0 auto」とする
+<br>**↓↓ここからセクション12↓↓**
+- (html)リンクはアンカータグ「\<a href="URL"></a>」を使う
+- (html)アンカータグは対象の外側のタグに付けても機能する
+- imgタグはインライン要素（横幅を持たない要素）
 # 次やること
 - 005.1.1_html_css
 # 感じたこと
 - 毎日続ける
 - ※ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 # 学習時間
-Today:h
-<br>Total:85.9h
+Today:3.7h
+<br>Total:89.6h
