--- a/202307/23.md
+++ b/202307/23.md
@@ -22,7 +22,7 @@
 - (html)アンカータグは対象の外側のタグに付けても機能する
 - imgタグはインライン要素（横幅を持たない要素）
 # 次やること
-- 005.1.1_html_css
+- GitHub Pagesでwebサイトを公開してみよう
 # 感じたこと
 - 毎日続ける
 - ※ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
