--- a/202307/27.md
+++ b/202307/27.md
@@ -1,1 +1,17 @@
-
+# 目安：HC内で1,000時間の学習
+# 取り組んだ課題一覧
+<br>udemy:html_css_（Gitセクションが終わるまで）復習
+- 復習
+<br>Google Chrome デベロッパーツール 徹底入門を見る
+- vol1
+- 基本的な使用方法学んだ
+<br>udemy:Git
+- N/A
+# 次やること
+- GitHub Pagesでwebサイトを公開してみよう
+# 感じたこと
+- 毎日続ける
+- ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
+# 学習時間
+Today:0.5h
+<br>Total:91.3h
