--- a/202307/30.md
+++ b/202307/30.md
@@ -3,7 +3,7 @@
 <br>udemy:html_css
 - 復習
 <br>HTML/CSS初級アウトプット課題
-- N/A
+- 製作中
 <br>udemy:Git
 - N/A
 # 次やること
@@ -12,5 +12,5 @@
 - 毎日続ける
 - ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 # 学習時間
-Today:h
-<br>Total:94.8h
+Today:1.5h
+<br>Total:96.3h
