--- a/202308/02.md
+++ b/202308/02.md
@@ -1,4 +1,4 @@
-i# 目安：HC内で1,000時間の学習
+## 目安：HC内で1,000時間の学習
 # 取り組んだ課題一覧
 <br>udemy:html_css
 - 復習
@@ -12,5 +12,5 @@ i# 目安：HC内で1,000時間の学習
 - 毎日続ける
 - ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 # 学習時間
-Today:1h
+Today:h
 <br>Total:97.3h
