--- a/202308/02.md
+++ b/202308/02.md
@@ -1,5 +1,6 @@
 # 目安：HC内で1,000時間の学習
-# 取り組んだ課題一覧
+## 100時間達成！！_2023/8/2
+## 取り組んだ課題一覧
 <br>udemy:html_css
 - 復習
 
@@ -8,11 +9,11 @@
 
 <br>udemy:Git
 - コマンドや用語をブログにまとめた
-# 次やること
+## 次やること
 - GitHub Pagesでwebサイトを公開してみよう
-# 感じたこと
+## 感じたこと
 - 毎日続ける
 - ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
-# 学習時間
-Today:h
-<br>Total:97.3h
+## 学習時間
+Today:5h
+<br>Total:102.3h
