--- a/202308/05.md
+++ b/202308/05.md
@@ -5,7 +5,7 @@ udemy:html_css
 - 復習
 
 HTML/CSS初級アウトプット課題
-- 製作中
+- 一旦完了したがGitHub Pagesのサイトが上手く表示されず・・・明日やる
 
 udemy:Git
 - コマンドや用語をブログにまとめた
@@ -15,5 +15,5 @@ udemy:Git
 - 毎日続ける
 - ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 ## 学習時間
-Today:h
-<br>Total:103.3h
+Today:9.2h
+<br>Total:112.5h
