--- a/202308/11.md
+++ b/202308/11.md
@@ -16,8 +16,11 @@ Pull Requestの練習
 github flowについて学ぶ
 - 完了
 
-Web開発の基礎を学ぶ
-- 
+udemy:HTML/CSS
+- 用語をブログにまとめた
+
+udemy:Web開発の基礎を学ぶ_1-52
+- 用語をブログにまとめた
 
 ## 次やること
 - HTML/CSS、Web開発の基礎を学ぶ
@@ -25,5 +28,5 @@ Web開発の基礎を学ぶ
 - 毎日続ける
 - ロードマップの03-05を誤って飛ばしてしまったので並行して03-05をやる
 ## 学習時間
-Today:h
-<br>Total:120.8h
+Today:6.5h
+<br>Total:127.3h
