--- a/202308/12.md
+++ b/202308/12.md
@@ -4,7 +4,7 @@
 HTML/CSS初級アウトプット課題
 - レビュー中
 
-udemy:Web開発の基礎を学ぶ_53-
+udemy:Web開発の基礎を学ぶ_53-134
 - 用語をブログにまとめた
 
 ## 次やること
@@ -12,5 +12,5 @@ udemy:Web開発の基礎を学ぶ_53-
 ## 感じたこと
 - 毎日続ける
 ## 学習時間
-Today:h
-<br>Total:127.3h
+Today:5h
+<br>Total:132.3h
