--- a/202308/16.md
+++ b/202308/16.md
@@ -11,9 +11,9 @@ udemy: Docker
 - 用語をブログにまとめた
 
 ## 次やること
-- HTML/CSS、Web開発の基礎を学ぶ
+- Docker
 ## 感じたこと
 - 毎日続ける
 ## 学習時間
-Today:h
-<br>Total:153.9h
+Today:h<br>
+Total:153.9h
