--- a/202308/16.md
+++ b/202308/16.md
@@ -5,9 +5,9 @@ HTML/CSS初級アウトプット課題
 - レビュー中
 
 GitHub Pagesでwebサイトを公開してみよう
-- 仕掛中
+- レビュー中
 
-udemy: Docker
+udemy: 米国AI開発者がゼロから教えるDocker講座
 - 用語をブログにまとめた
 
 ## 次やること
