--- a/202308/16.md
+++ b/202308/16.md
@@ -7,7 +7,7 @@ HTML/CSS初級アウトプット課題
 GitHub Pagesでwebサイトを公開してみよう
 - レビュー中
 
-udemy: 米国AI開発者がゼロから教えるDocker講座
+udemy: 米国AI開発者がゼロから教えるDocker講座1-23
 - 用語をブログにまとめた
 
 ## 次やること
@@ -15,5 +15,5 @@ udemy: 米国AI開発者がゼロから教えるDocker講座
 ## 感じたこと
 - 毎日続ける
 ## 学習時間
-Today:h<br>
-Total:153.9h
+Today:4.5h<br>
+Total:158.4h
