--- a/202308/17.md
+++ b/202308/17.md
@@ -7,7 +7,7 @@ HTML/CSS初級アウトプット課題
 GitHub Pagesでwebサイトを公開してみよう
 - レビュー中
 
-udemy: 米国AI開発者がゼロから教えるDocker講座24-
+udemy: 米国AI開発者がゼロから教えるDocker講座24-65
 - 用語をブログにまとめた
 
 ## 次やること
@@ -15,5 +15,5 @@ udemy: 米国AI開発者がゼロから教えるDocker講座24-
 ## 感じたこと
 - 毎日続ける
 ## 学習時間
-Today:h<br>
-Total:158.4h
+Today:5.7h<br>
+Total:164.1h
