--- a/202308/18.md
+++ b/202308/18.md
@@ -4,11 +4,11 @@
 HTML/CSS初級アウトプット課題
 - レビュー中
 
-GitHub Pagesでwebサイトを公開してみよう
-- レビュー中
-
-udemy: 米国AI開発者がゼロから教えるDocker講座66-
+udemy: 米国AI開発者がゼロから教えるDocker講座66-111
 - 用語をブログにまとめた
+
+Ruby
+- ローカル上に環境構築
 
 ## 次やること
 - Docker
