--- a/202308/19.md
+++ b/202308/19.md
@@ -7,8 +7,10 @@ HTML/CSS初級アウトプット課題
 udemy: 米国AI開発者がゼロから教えるDocker講座112-完了
 - 用語をブログにまとめた
 
-Ruby
-- ローカル上に環境構築
+Docker入門
+- 入門 Dockerを読む →　完了
+- Dockerのチュートリアルをやる →　
+- クィックスタート: Compose と Railsをやる →　
 
 ## 次やること
 - Docker
