--- a/202308/19.md
+++ b/202308/19.md
@@ -9,7 +9,7 @@ udemy: 米国AI開発者がゼロから教えるDocker講座112-完了
 
 Docker入門
 - 入門 Dockerを読む →　完了
-- Dockerのチュートリアルをやる →　
+- Dockerのチュートリアルをやる →　1-7
 - クィックスタート: Compose と Railsをやる →　
 
 ## 次やること
@@ -17,5 +17,5 @@ Docker入門
 ## 感じたこと
 - 毎日続ける
 ## 学習時間
-Today:h<br>
-Total:172.1h
+Today:5.5h<br>
+Total:177.6h
