--- a/202308/20.md
+++ b/202308/20.md
@@ -1,13 +1,16 @@
 # 目安：HC内で1,000時間の学習
 ## 100時間達成！！_2023/8/2
 ## 取り組んだ課題一覧＋わかったこと
-HTML/CSS初級アウトプット課題
+【課題】HTML/CSS初級アウトプット課題
 - レビュー中
 
 Docker入門
 - 入門 Dockerを読む →　完了
-- Dockerのチュートリアルをやる →　1-7
-- クィックスタート: Compose と Railsをやる →　
+- Dockerのチュートリアルをやる →　8-完了
+- クィックスタート: Compose と Railsをやる →　完了
+
+【課題】dockerで開発環境を構築する
+- 
 
 ## 次やること
 - Docker
