--- a/202308/20.md
+++ b/202308/20.md
@@ -10,12 +10,12 @@ Docker入門
 - クィックスタート: Compose と Railsをやる →　完了
 
 【提出】dockerで開発環境を構築する
-- 
+- 仕掛中
 
 ## 次やること
 - Docker
 ## 感じたこと
 - 毎日続ける
 ## 学習時間
-Today:h<br>
-Total:177.6h
+Today:6h<br>
+Total:183.6h
