--- a/202308/21.md
+++ b/202308/21.md
@@ -1,16 +1,16 @@
 # 目安：HC内で1,000時間の学習
 ## 100時間達成！！_2023/8/2
-## 取り組んだ課題一覧＋わかったこと
+### 取り組んだ課題一覧＋わかったこと
 【提出】HTML/CSS初級アウトプット課題
 - レビュー中
 
 【提出】dockerで開発環境を構築する
 - レビュー中
 
-## 次やること
+### 次やること
 - Docker
-## 感じたこと
+### 感じたこと
 - 毎日続ける
-## 学習時間
+### 学習時間
 Today:3.3h<br>
 Total:186.9h
