--- a/202308/21.md
+++ b/202308/21.md
@@ -1,5 +1,5 @@
 # 目安：HC内で1,000時間の学習
-## 100時間達成！！_2023/8/2
+## 100時間達成!!_2023/8/2
 ### 取り組んだ課題一覧＋わかったこと
 【提出】HTML/CSS初級アウトプット課題
 - レビュー中
@@ -8,7 +8,7 @@
 - レビュー中
 
 ### 次やること
-- Docker
+- Ruby
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
