--- a/202308/22.md
+++ b/202308/22.md
@@ -2,7 +2,7 @@
 ## 100時間達成!!_2023/8/2
 ### 取り組んだ課題一覧＋わかったこと
 
-プロを目指す人のためのRuby入門を読む
+プロを目指す人のためのRuby入門を読むP1-136
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -10,5 +10,5 @@
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:186.9h
+Today:7h<br>
+Total:193.9h
