--- a/202308/24.md
+++ b/202308/24.md
@@ -4,7 +4,7 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 
-プロを目指す人のためのRuby入門を読むP210-
+プロを目指す人のためのRuby入門を読むP210-286
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -12,5 +12,5 @@
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:198.0h
+Today:7h<br>
+Total:205.0h
