--- a/202308/26.md
+++ b/202308/26.md
@@ -4,13 +4,16 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 
-プロを目指す人のためのRuby入門を読むP438-
+プロを目指す人のためのRuby入門を読むP438-完了
 - 用語等をブログにまとめた
+
+SQL超入門コース
+- 完了
 
 ### 次やること
 - Ruby
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:210.2h
+Today:4.3h<br>
+Total:214.5h
