--- a/202308/27.md
+++ b/202308/27.md
@@ -4,13 +4,22 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 
+Rubocopについて調べる(以下の課題は提出前にrubocopを通してください)
+- 完了
+
 グループ分け問題
-- 
+- レビュー中
+
+Rubyでカレンダーを作る
+- レビュー中
+
+ゴルフのスコア判定プログラム
+- 仕掛中
 
 ### 次やること
 - Ruby
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:4.3h<br>
-Total:214.5h
+Today:6.7h<br>
+Total:221.2h
