--- a/202308/28.md
+++ b/202308/28.md
@@ -5,7 +5,7 @@
 ### 取り組んだ課題一覧＋わかったこと
 
 グループ分け問題
-- 完了
+- レビュー中
 
 Rubyでカレンダーを作る
 - 完了
@@ -21,5 +21,5 @@ Suica版自動販売機問題
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:221.2h
+Today:3.5h<br>
+Total:224.7h
