--- a/202308/30.md
+++ b/202308/30.md
@@ -5,13 +5,13 @@
 ### 取り組んだ課題一覧＋わかったこと
 
 グループ分け問題
-- レビュー中
+- 完了
 
 Rubyでカレンダーを作る
 - 完了
 
 ゴルフのスコア判定プログラム
-- レビュー中
+- 完了
 
 Suica版自動販売機問題
 - 仕掛中
@@ -21,5 +21,5 @@ Suica版自動販売機問題
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:225.7h
+Today:1.5h<br>
+Total:227.2h
