--- a/202309/02.md
+++ b/202309/02.md
@@ -4,17 +4,8 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 
-グループ分け問題
-- 完了
-
-Rubyでカレンダーを作る
-- 完了
-
-ゴルフのスコア判定プログラム
-- 完了
-
 Suica版自動販売機問題
-- 仕掛中
+- レビュー中
 
 ### 次やること
 - Ruby
