--- a/202309/07.md
+++ b/202309/07.md
@@ -5,15 +5,15 @@
 ### 取り組んだ課題一覧＋わかったこと
 
 Suica版自動販売機問題
-- レビュー中
+- 完了
 
 ポケモンで学ぶ！クラスとオブジェクト指向
-- レビュー中
+- 完了
 
 ### 次やること
 - Ruby
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:243.5h
+Today:1.9h<br>
+Total:245.4h
