--- a/202309/15.md
+++ b/202309/15.md
@@ -4,7 +4,7 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 
-達人に学ぶDB設計徹底指南書_P1-
+達人に学ぶDB設計徹底指南書_P1-41
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -12,5 +12,5 @@
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:251.5h
+Today:0.9h<br>
+Total:252.4h
