--- a/202309/18.md
+++ b/202309/18.md
@@ -3,14 +3,14 @@
 ## 200時間達成!!_2023/8/24<br>
 
 ### 取り組んだ課題一覧＋わかったこと
-
 達人に学ぶDB設計徹底指南書_P186-完了
 - 用語等をブログにまとめた
-
+SQL課題
+- 仕掛中
 ### 次やること
 - SQL
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:255.6h
+Today:3.5h<br>
+Total:259.1h
