--- a/202309/19.md
+++ b/202309/19.md
@@ -5,10 +5,15 @@
 ### 取り組んだ課題一覧＋わかったこと
 SQL課題
 - 仕掛中
+
+REST WebAPI サービス 設計 | Udemyを見る。
+- 用語等をブログにまとめた
+
 ### 次やること
 - SQL
+- REST
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:259.1h
+Today:1.3h<br>
+Total:260.4h
