--- a/202309/21.md
+++ b/202309/21.md
@@ -10,7 +10,19 @@ REST WebAPI サービス 設計 | Udemyを見る。
 - REST
 ### 感じたこと
 - 毎日続ける
-- 機械学習もやる
 ### 学習時間
 Today:h<br>
 Total:262.1h
+
+------------------------------------------
+# E資格取得が当面の目標
+## 機械学習・深層学習
+### 取り組んだ課題一覧＋わかったこと
+- 
+### 次やること
+- 
+### 感じたこと
+- 毎日続ける
+### 学習時間
+Today:h<br>
+Total:h
