--- a/202309/21.md
+++ b/202309/21.md
@@ -15,7 +15,7 @@ Today:h<br>
 Total:262.1h
 
 ------------------------------------------
-# E資格取得が当面の目標
+# HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ### 取り組んだ課題一覧＋わかったこと
 - 
