--- a/202309/21.md
+++ b/202309/21.md
@@ -17,12 +17,14 @@ Total:262.1h
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
+## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-- 
+- 学習ロードマップを立てた
 ### 次やること
-- 
+- 機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む
 ### 感じたこと
 - 毎日続ける
+- 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:h
+Today:1h<br>
+Total:1h
