--- a/202309/21.md
+++ b/202309/21.md
@@ -11,8 +11,8 @@ REST WebAPI サービス 設計 | Udemyを見る。
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:262.1h
+Today:1.1h<br>
+Total:263.2h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
