--- a/202309/22.md
+++ b/202309/22.md
@@ -4,14 +4,14 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 REST WebAPI サービス 設計 | Udemyを見る。
-- 用語等をブログにまとめた
+- 完了
 
 ### 次やること
 - REST
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
+Today:1.7h<br>
 Total:263.2h
 
 ------------------------------------------
