--- a/202309/22.md
+++ b/202309/22.md
@@ -19,7 +19,7 @@ Total:264.9h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-- 
+- 機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_P1-
 ### 次やること
 - 機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む
 ### 感じたこと
@@ -27,5 +27,5 @@ Total:264.9h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
+Today:0h<br>
 Total:1h
