--- a/202309/23.md
+++ b/202309/23.md
@@ -9,7 +9,7 @@ REST課題
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座
 - 
 
-Ruby on Rails5速習実践ガイドを読む
+Ruby on Rails5速習実践ガイドを読む_40/484
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -17,8 +17,8 @@ Ruby on Rails5速習実践ガイドを読む
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:264.9h
+Today:2.9h<br>
+Total:267.8h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
