--- a/202309/23.md
+++ b/202309/23.md
@@ -25,7 +25,7 @@ Total:267.8h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_P1-
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_15/240
 - 
 
 ### 次やること
@@ -35,5 +35,5 @@ Total:267.8h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:0h<br>
-Total:1h
+Today:0.3h<br>
+Total:1.3h
