--- a/202309/24.md
+++ b/202309/24.md
@@ -4,12 +4,12 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 REST課題
-- レビュー中
+- 完了
 
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座
 - 
 
-Ruby on Rails5速習実践ガイドを読む_40/484
+Ruby on Rails5速習実践ガイドを読む_/484
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -17,7 +17,7 @@ Ruby on Rails5速習実践ガイドを読む_40/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:2.9h<br>
+Today:h<br>
 Total:267.8h
 
 ------------------------------------------
@@ -25,7 +25,7 @@ Total:267.8h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_15/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_/240
 - 
 
 ### 次やること
@@ -35,5 +35,5 @@ Total:267.8h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:0.3h<br>
+Today:h<br>
 Total:1.3h
