--- a/202309/24.md
+++ b/202309/24.md
@@ -9,7 +9,7 @@ REST課題
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座
 - 
 
-Ruby on Rails5速習実践ガイドを読む_/484
+Ruby on Rails5速習実践ガイドを読む_80/484
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -17,8 +17,8 @@ Ruby on Rails5速習実践ガイドを読む_/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:267.8h
+Today:3.5h<br>
+Total:271.3h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
