--- a/202309/24.md
+++ b/202309/24.md
@@ -25,7 +25,7 @@ Total:271.3h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_56/240
 - 
 
 ### 次やること
@@ -35,5 +35,5 @@ Total:271.3h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:1.3h
+Today:1h<br>
+Total:2.3h
