--- a/202309/25.md
+++ b/202309/25.md
@@ -4,9 +4,9 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座
-- 
+- N/A
 
-Ruby on Rails5速習実践ガイドを読む_/484
+Ruby on Rails5速習実践ガイドを読む_87/484
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -14,16 +14,16 @@ Ruby on Rails5速習実践ガイドを読む_/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:271.3h
+Today:1.1h<br>
+Total:272.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_/240
-- 
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_56/240
+- N/A
 
 ### 次やること
 - 機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む
@@ -32,5 +32,5 @@ Total:271.3h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
+Today:0h<br>
 Total:2.3h
