--- a/202309/26.md
+++ b/202309/26.md
@@ -6,7 +6,7 @@
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座
 - N/A
 
-Ruby on Rails5速習実践ガイドを読む_87/484
+Ruby on Rails5速習実践ガイドを読む_87-105/484
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -22,7 +22,7 @@ Total:272.4h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_56/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_56-/240
 - N/A
 
 ### 次やること
