--- a/202309/26.md
+++ b/202309/26.md
@@ -14,15 +14,15 @@ Ruby on Rails5速習実践ガイドを読む_87-105/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:272.4h
+Today:1.6h<br>
+Total:274h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_56-/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_56-73/240
 - N/A
 
 ### 次やること
@@ -32,5 +32,5 @@ Total:272.4h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:2.3h
+Today:0.2h<br>
+Total:2.5h
