--- a/202309/28.md
+++ b/202309/28.md
@@ -1,6 +1,6 @@
 # 目安：HC内で1,000時間の学習
-## 100時間達成!!_2023/8/2<br>
-## 200時間達成!!_2023/8/24<br>
+## 100時間達成!!_2023/8/2
+## 200時間達成!!_2023/8/24
 
 ### 取り組んだ課題一覧＋わかったこと
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S
