--- a/202309/29.md
+++ b/202309/29.md
@@ -3,7 +3,7 @@
 ## 200時間達成!!_2023/8/24
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S3
 - 用語等をブログにまとめた
 
 Ruby on Rails5速習実践ガイドを読む_124-/484
@@ -14,15 +14,15 @@ Ruby on Rails5速習実践ガイドを読む_124-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:277.5h
+Today:1h<br>
+Total:278.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_100-/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_100-111/240
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -32,5 +32,5 @@ Total:277.5h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:3.3h
+Today:0.3h<br>
+Total:3.6h
