--- a/202309/30.md
+++ b/202309/30.md
@@ -6,23 +6,25 @@
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S3
 - 用語等をブログにまとめた
 
-Ruby on Rails5速習実践ガイドを読む_124-/484
+Ruby on Rails5速習実践ガイドを読む_124-187/484
 - 用語等をブログにまとめた
+
+各セクションをブログで復習
 
 ### 次やること
 - Rails
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:278.5h
+Today:3.3h<br>
+Total:281.8h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_111-/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_111-164/240
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -32,5 +34,5 @@ Total:278.5h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:3.6h
+Today:0.5h<br>
+Total:4.1h
