--- a/202310/01.md
+++ b/202310/01.md
@@ -3,32 +3,33 @@
 ## 200時間達成!!_2023/8/24
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S3
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S3-
 - 用語等をブログにまとめた
 
-Ruby on Rails5速習実践ガイドを読む_187-/484
+Ruby on Rails5速習実践ガイドを読む_187-201/484
 - 用語等をブログにまとめた
-
-各セクションをブログで復習
+- 復習
 
 ### 次やること
 - Rails
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:281.8h
+Today:2.1h<br>
+Total:283.9h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_164-/240
+機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_164-完了/240
 - 用語等をブログにまとめた
 
+
+
 ### 次やること
-- 機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む
+- 
 ### 感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
