--- a/202310/01.md
+++ b/202310/01.md
@@ -26,8 +26,6 @@ Total:283.9h
 機械学習&ディープラーニングのしくみと技術がしっかりわかる教科書を読む_164-完了/240
 - 用語等をブログにまとめた
 
-
-
 ### 次やること
 - 
 ### 感じたこと
@@ -35,5 +33,5 @@ Total:283.9h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:4.1h
+Today:2.2h<br>
+Total:6.3h
