--- a/202310/02.md
+++ b/202310/02.md
@@ -3,7 +3,7 @@
 ## 200時間達成!!_2023/8/24
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S3-
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S3-8
 - 用語等をブログにまとめた
 
 Ruby on Rails5速習実践ガイドを読む_201-/484
@@ -15,8 +15,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:283.9h
+Today:5.4h<br>
+Total:289.3h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
