--- a/202310/02.md
+++ b/202310/02.md
@@ -23,15 +23,15 @@ Total:289.3h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_
+ディープラーニングの数学_42/340
 - 用語等をブログにまとめた
 
 ### 次やること
-- 
+- ディープラーニングの数学
 ### 感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:6.3h
+Today:0.6h<br>
+Total:6.9h
