--- a/202310/03.md
+++ b/202310/03.md
@@ -23,7 +23,7 @@ Total:294.9h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_42-/340
+ディープラーニングの数学_42-75/340
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -33,5 +33,5 @@ Total:294.9h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:6.9h
+Today:1h<br>
+Total:7.9h
