--- a/202310/04.md
+++ b/202310/04.md
@@ -1,9 +1,10 @@
 # 目安：HC内で1,000時間の学習
 ## 100時間達成!!_2023/8/2
 ## 200時間達成!!_2023/8/24
+## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/64-
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/64-79
 - 用語等をブログにまとめた
 
 Ruby on Rails5速習実践ガイドを読む_201-/484
@@ -15,8 +16,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:294.9h
+Today:6.8h<br>
+Total:301.7h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
