--- a/202310/04.md
+++ b/202310/04.md
@@ -24,7 +24,7 @@ Total:301.7h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_75-/340
+ディープラーニングの数学_75-126/340
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -34,5 +34,5 @@ Total:301.7h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:7.9h
+Today:1.5h<br>
+Total:9.4h
