--- a/202310/05.md
+++ b/202310/05.md
@@ -4,7 +4,7 @@
 ## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/79-
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/79-97(完了)
 - 用語等をブログにまとめた
 
 Ruby on Rails5速習実践ガイドを読む_201-/484
@@ -16,8 +16,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:301.7h
+Today:6.1h<br>
+Total:307.8h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
