--- a/202310/05.md
+++ b/202310/05.md
@@ -24,7 +24,7 @@ Total:307.8h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_126-/340
+ディープラーニングの数学_126-171/340
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -34,5 +34,5 @@ Total:307.8h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:9.4h
+Today:0.7h<br>
+Total:10.1h
