--- a/202310/06.md
+++ b/202310/06.md
@@ -6,6 +6,7 @@
 ### 取り組んだ課題一覧＋わかったこと
 フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/97-s10/
 - 用語等をブログにまとめた
+- 復習
 
 Ruby on Rails5速習実践ガイドを読む_201-/484
 - 用語等をブログにまとめた
@@ -24,7 +25,7 @@ Total:307.8h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_171-/340
+ディープラーニングの数学_171-187/340
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -34,5 +35,5 @@ Total:307.8h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:10.1h
+Today:0.8h<br>
+Total:10.9h
