--- a/202310/08.md
+++ b/202310/08.md
@@ -17,8 +17,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:308.5h
+Today:3.1h<br>
+Total:311.6h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
