--- a/202310/09.md
+++ b/202310/09.md
@@ -4,7 +4,7 @@
 ## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/97-s10/
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/97-s10/104
 - 用語等をブログにまとめた
 - 復習
 
@@ -17,8 +17,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:311.6h
+Today:3.8h<br>
+Total:315.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
