--- a/202310/10.md
+++ b/202310/10.md
@@ -4,7 +4,7 @@
 ## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_S9/97-s10/104
+フルスタックエンジニアが教える 即戦力Railsエンジニア養成講座_s10/104-完了
 - 用語等をブログにまとめた
 - 復習
 
@@ -17,7 +17,7 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:3.8h<br>
+Today:h<br>
 Total:315.4h
 
 ------------------------------------------
