--- a/202310/10.md
+++ b/202310/10.md
@@ -17,8 +17,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:315.4h
+Today:5.6h<br>
+Total:321h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
