--- a/202310/10.md
+++ b/202310/10.md
@@ -25,7 +25,7 @@ Total:321.1h
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_211-/340
+ディープラーニングの数学_211-266/340
 - 用語等をブログにまとめた
 
 ### 次やること
@@ -35,5 +35,5 @@ Total:321.1h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:11.9h
+Today:0.4h<br>
+Total:12.3h
