--- a/202310/11.md
+++ b/202310/11.md
@@ -13,8 +13,8 @@ Ruby on Rails5速習実践ガイドを読む_201-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:321.1h
+Today:1.1h<br>
+Total:322.2h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
