--- a/202310/13.md
+++ b/202310/13.md
@@ -4,7 +4,7 @@
 ## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-Ruby on Rails5速習実践ガイドを読む_242-/484
+Ruby on Rails5速習実践ガイドを読む_242-254/484
 - 用語等をブログにまとめた
 - 復習
 
@@ -13,8 +13,8 @@ Ruby on Rails5速習実践ガイドを読む_242-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:324.3h
+Today:2h<br>
+Total:326.3h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
