--- a/202310/14.md
+++ b/202310/14.md
@@ -4,7 +4,7 @@
 ## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-Ruby on Rails5速習実践ガイドを読む_254-/484
+Ruby on Rails5速習実践ガイドを読む_254-335/484
 - 用語等をブログにまとめた
 - 復習
 
