--- a/202310/14.md
+++ b/202310/14.md
@@ -13,8 +13,8 @@ Ruby on Rails5速習実践ガイドを読む_254-335/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:326.3h
+Today:5.2h<br>
+Total:331.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
