--- a/202310/16.md
+++ b/202310/16.md
@@ -4,7 +4,7 @@
 ## 300時間達成!!_2023/10/4
 
 ### 取り組んだ課題一覧＋わかったこと
-Ruby on Rails5速習実践ガイドを読む_381-/484
+Ruby on Rails5速習実践ガイドを読む_381-完了/484
 - 用語等をブログにまとめた
 - 復習
 
@@ -13,23 +13,23 @@ Ruby on Rails5速習実践ガイドを読む_381-/484
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:336.5h
+Today:2h<br>
+Total:338.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ディープラーニングの数学_266-/340
+ディープラーニングの数学_266-完了/340
 - 用語等をブログにまとめた
 
 ### 次やること
-- ディープラーニングの数学
+- ゼロから作るDeep Learning
 ### 感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:12.3h
+Today:0.7h<br>
+Total:13h
