--- a/202310/17.md
+++ b/202310/17.md
@@ -15,16 +15,17 @@ Ruby on Rails5速習実践ガイドを読む
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:338.5h
+Today:2.3h<br>
+Total:340.8h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
+復習
+
 ゼロから作るDeep Learning
-- 用語等をブログにまとめた
 
 ### 次やること
 - ゼロから作るDeep Learning
@@ -33,5 +34,5 @@ Total:338.5h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:13h
+Today:0.5h<br>
+Total:13.5h
