--- a/202310/18.md
+++ b/202310/18.md
@@ -15,8 +15,8 @@ Ruby on Rails5速習実践ガイドを読む
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:340.8h
+Today:2.6h<br>
+Total:343.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
