--- a/202310/21.md
+++ b/202310/21.md
@@ -15,8 +15,8 @@ Ruby on Rails5速習実践ガイドを読む
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:345.4h
+Today:5h<br>
+Total:350.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
