--- a/202310/22.md
+++ b/202310/22.md
@@ -12,8 +12,8 @@ RailsでECサイトを作る
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:350.4h
+Today:7.3h<br>
+Total:357.7h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
