--- a/202310/23.md
+++ b/202310/23.md
@@ -5,15 +5,16 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 RailsでECサイトを作る
-- 仕掛中
+- 商品一覧→レビュー中
+- 商品詳細→仕掛中
 
 ### 次やること
 - Rails
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:357.7h
+Today:3.3h<br>
+Total:361h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -29,5 +30,5 @@ Total:357.7h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:13.5h
+Today:0.6h<br>
+Total:14.1h
