--- a/202310/24.md
+++ b/202310/24.md
@@ -13,8 +13,8 @@ RailsでECサイトを作る
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:361h
+Today:4.9h<br>
+Total:365.9h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
