--- a/202310/27.md
+++ b/202310/27.md
@@ -13,8 +13,8 @@ RailsでECサイトを作る
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:372.2h
+Today:1.3h<br>
+Total:373.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
