--- a/202310/28.md
+++ b/202310/28.md
@@ -14,8 +14,8 @@ RailsでECサイトを作る
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:373.5h
+Today:5h<br>
+Total:378.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
