--- a/202311/01.md
+++ b/202311/01.md
@@ -7,15 +7,15 @@
 RailsでECサイトを作る
 - 商品一覧→完了
 - 商品詳細→完了
-- 商品管理→仕掛中
+- 商品管理→レビュー中
 
 ### 次やること
 - Rails
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:387.5h
+Today:5.9h<br>
+Total:393.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
