--- a/202311/02.md
+++ b/202311/02.md
@@ -8,14 +8,15 @@ RailsでECサイトを作る
 - 商品一覧→完了
 - 商品詳細→完了
 - 商品管理→レビュー中
+- カート機能→仕掛中
 
 ### 次やること
 - Rails
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:393.4h
+Today:4.4h<br>
+Total:397.9h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
