--- a/202311/03.md
+++ b/202311/03.md
@@ -2,12 +2,13 @@
 ## 100時間達成!!_2023/8/2
 ## 200時間達成!!_2023/8/24
 ## 300時間達成!!_2023/10/4
+## 400時間達成!!_2023/11/3
 
 ### 取り組んだ課題一覧＋わかったこと
 RailsでECサイトを作る
 - 商品一覧→完了
 - 商品詳細→完了
-- 商品管理→レビュー中
+- 商品管理→完了
 - カート機能→仕掛中
 
 ### 次やること
@@ -15,8 +16,8 @@ RailsでECサイトを作る
 ### 感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:397.9h
+Today:7.5h<br>
+Total:405.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
