--- a/202311/04.md
+++ b/202311/04.md
@@ -15,9 +15,10 @@ RailsでECサイトを作る
 - Rails
 ### 感じたこと
 - 毎日続ける
+- DELETEメソッドのエラーにはJSのプレコンパイルで解決した！
 ### 学習時間
-Today:h<br>
-Total:405.4h
+Today:2.1h<br>
+Total:407.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
