--- a/202311/05.md
+++ b/202311/05.md
@@ -15,9 +15,9 @@ RailsでECサイトを作る
 - Rails
 ### 感じたこと
 - 毎日続ける
-- DELETEメソッドのエラーにはJSのプレコンパイルで解決した！
+- 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
+Today:0h<br>
 Total:407.5h
 
 ------------------------------------------
@@ -26,6 +26,7 @@ Total:407.5h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ゼロから作るDeep Learning
+- P122まで
 
 ### 次やること
 - ゼロから作るDeep Learning
