--- a/202311/06.md
+++ b/202311/06.md
@@ -17,8 +17,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:407.5h
+Today:2h<br>
+Total:409.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
