--- a/202311/06.md
+++ b/202311/06.md
@@ -26,7 +26,7 @@ Total:409.5h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ゼロから作るDeep Learning
-- P122まで
+- P122-146
 
 ### 次やること
 - ゼロから作るDeep Learning
@@ -35,5 +35,5 @@ Total:409.5h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:20.1h
+Today:1h<br>
+Total:21.1h
