--- a/202311/08.md
+++ b/202311/08.md
@@ -17,8 +17,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:412h
+Today:4.3h<br>
+Total:416.3h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -26,7 +26,7 @@ Total:412h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ゼロから作るDeep Learning
-- P170
+- P170-220
 
 ### 次やること
 - ゼロから作るDeep Learning
@@ -35,5 +35,5 @@ Total:412h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:22.6h
+Today:1.4h<br>
+Total:24h
