--- a/202311/09.md
+++ b/202311/09.md
@@ -9,7 +9,7 @@ RailsでECサイトを作る
 - 商品一覧→完了
 - 商品詳細→完了
 - 商品管理→完了
-- カート機能→仕掛中
+- カート機能→レビュー中
 
 ### 次やること
 - Rails
@@ -17,8 +17,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:416.3h
+Today:2.9h<br>
+Total:419.2h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -26,7 +26,7 @@ Total:416.3h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ゼロから作るDeep Learning
-- P220-
+- P220-最後まで
 
 ### 次やること
 - ゼロから作るDeep Learning
@@ -35,5 +35,5 @@ Total:416.3h
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:24h
+Today:2.7h<br>
+Total:26.7h
