--- a/202311/11.md
+++ b/202311/11.md
@@ -17,8 +17,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:424.7h
+Today:1.9h<br>
+Total:426.6h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -26,7 +26,7 @@ Total:424.7h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 Python/JavaScriptによるOpenAIプログラミング
-- P38
+- P38-92
 
 ### 次やること
 - 上記教材
@@ -35,5 +35,5 @@ Python/JavaScriptによるOpenAIプログラミング
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:29.3h
+Today:2.9h<br>
+Total:32.2h
