--- a/202311/12.md
+++ b/202311/12.md
@@ -9,7 +9,7 @@ RailsでECサイトを作る
 - 商品一覧→完了
 - 商品詳細→完了
 - 商品管理→完了
-- カート機能→レビュー中
+- カート機能→完了
 - チェックアウト機能→仕掛中
 
 ### 次やること
@@ -18,8 +18,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:426.6h
+Today:2.7h<br>
+Total:429.3h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -27,7 +27,7 @@ Total:426.6h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 Python/JavaScriptによるOpenAIプログラミング
-- P92
+- P92-108
 
 ### 次やること
 - 上記教材
@@ -36,5 +36,5 @@ Python/JavaScriptによるOpenAIプログラミング
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:32.2h
+Today:2.1h<br>
+Total:34.3h
