--- a/202311/13.md
+++ b/202311/13.md
@@ -10,7 +10,7 @@ RailsでECサイトを作る
 - 商品詳細→完了
 - 商品管理→完了
 - カート機能→完了
-- チェックアウト機能→仕掛中
+- チェックアウト機能→レビュー中
 
 ### 次やること
 - Rails
@@ -18,8 +18,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:429.3h
+Today:2.4h<br>
+Total:431.7h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
