--- a/202311/14.md
+++ b/202311/14.md
@@ -18,8 +18,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:431.7h
+Today:4.2h<br>
+Total:435.9h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -27,7 +27,7 @@ Total:431.7h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 Python/JavaScriptによるOpenAIプログラミング
-- P108-
+- P108-191
 
 ### 次やること
 - 上記教材
@@ -36,5 +36,5 @@ Python/JavaScriptによるOpenAIプログラミング
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:34.3h
+Today:2.2h<br>
+Total:36.5h
