--- a/202311/15.md
+++ b/202311/15.md
@@ -10,7 +10,8 @@ RailsでECサイトを作る
 - 商品詳細→完了
 - 商品管理→完了
 - カート機能→完了
-- チェックアウト機能→レビュー中
+- チェックアウト機能→完了
+- 購入明細機能→仕掛中
 
 ### 次やること
 - Rails
@@ -18,8 +19,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:435.9h
+Today:3.8h<br>
+Total:439.7h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -27,7 +28,7 @@ Total:435.9h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 Python/JavaScriptによるOpenAIプログラミング
-- P191-
+- P191-202
 
 ### 次やること
 - 上記教材
@@ -36,5 +37,5 @@ Python/JavaScriptによるOpenAIプログラミング
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:36.5h
+Today:0.7h<br>
+Total:37.2h
