--- a/202311/16.md
+++ b/202311/16.md
@@ -28,7 +28,10 @@ Total:439.7h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 Python/JavaScriptによるOpenAIプログラミング
-- P202-
+- P202-最後まで
+
+LangChain完全入門
+- P1-
 
 ### 次やること
 - 上記教材
