--- a/202311/16.md
+++ b/202311/16.md
@@ -33,6 +33,9 @@ Python/JavaScriptによるOpenAIプログラミング
 LangChain完全入門
 - P1-
 
+ゼロから作るDeep Learning②
+- P1-
+
 ### 次やること
 - 上記教材
 ### 感じたこと
@@ -40,5 +43,5 @@ LangChain完全入門
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:37.2h
+Today:3.8h<br>
+Total:41h
