--- a/202311/17.md
+++ b/202311/17.md
@@ -19,8 +19,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:439.7h
+Today:6h<br>
+Total:445.7h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
