--- a/202311/18.md
+++ b/202311/18.md
@@ -29,7 +29,7 @@ Total:449.4h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 LangChain完全入門
-- P51-
+- P51-96
 
 ゼロから作るDeep Learning②
 - P18-
@@ -41,5 +41,5 @@ LangChain完全入門
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:41h
+Today:2.1h<br>
+Total:43.1h
