--- a/202311/19.md
+++ b/202311/19.md
@@ -28,7 +28,7 @@ Total:449.4h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 LangChain完全入門
-- P96-
+- P96-153
 
 ゼロから作るDeep Learning②
 - P18-
@@ -40,5 +40,5 @@ LangChain完全入門
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:43.1h
+Today:4.6h<br>
+Total:47.7h
