--- a/202311/20.md
+++ b/202311/20.md
@@ -19,8 +19,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:449.4h
+Today:3h<br>
+Total:452.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
