--- a/202311/20.md
+++ b/202311/20.md
@@ -28,10 +28,10 @@ Total:452.4h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 LangChain完全入門
-- P153-
+- P153-190
 
 ゼロから作るDeep Learning②
-- P18-
+- P18-36
 
 ### 次やること
 - 上記教材
@@ -40,5 +40,5 @@ LangChain完全入門
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:47.7h
+Today:4.7h<br>
+Total:52.4h
