--- a/202311/21.md
+++ b/202311/21.md
@@ -28,7 +28,7 @@ Total:454.5h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 LangChain完全入門
-- P190-
+- P190-完了
 
 ゼロから作るDeep Learning②
 - P36-
@@ -40,5 +40,5 @@ LangChain完全入門
 - 学習ロードマップは適宜見直す
 - あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:52.4h
+Today:1.9h<br>
+Total:54.3h
