--- a/202311/22.md
+++ b/202311/22.md
@@ -20,8 +20,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:454.5h
+Today:4.6h<br>
+Total:459.1h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -39,7 +39,6 @@ ChatGPT/LangChainによるチャットシステム構築［実践］入門
 ### 感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
-- あれもこれも手を出したくはないがやれるだけやる
 ### 学習時間
-Today:h<br>
-Total:54.3h
+Today:0.8h<br>
+Total:55.1h
