--- a/202311/23.md
+++ b/202311/23.md
@@ -20,8 +20,8 @@ RailsでECサイトを作る
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:459.1h
+Today:2.1h<br>
+Total:461.2h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
