--- a/202311/24.md
+++ b/202311/24.md
@@ -5,7 +5,7 @@
 ## 400時間達成!!_2023/11/3
 
 ### 取り組んだ課題一覧＋わかったこと
-RailsでECサイトを作る
+RailsでECサイトを作る→全て実装完了！！
 - 商品一覧→完了
 - 商品詳細→完了
 - 商品管理→完了
@@ -13,7 +13,6 @@ RailsでECサイトを作る
 - チェックアウト機能→完了
 - 購入明細機能→完了
 - プロモーションコード機能実装→完了
-全て実装完了！！
 
 ### 次やること
 - Rails
