--- a/202311/24.md
+++ b/202311/24.md
@@ -29,7 +29,7 @@ Total:464.1h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ChatGPT/LangChainによるチャットシステム構築［実践］入門
-- P24-
+- P24-140
 
 ゼロから作るDeep Learning②
 - P36-
@@ -40,5 +40,5 @@ ChatGPT/LangChainによるチャットシステム構築［実践］入門
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:55.1h
+Today:4.7h<br>
+Total:59.8h
