--- a/202311/25.md
+++ b/202311/25.md
@@ -5,14 +5,7 @@
 ## 400時間達成!!_2023/11/3
 
 ### 取り組んだ課題一覧＋わかったこと
-RailsでECサイトを作る→全て実装完了！！
-- 商品一覧→完了
-- 商品詳細→完了
-- 商品管理→完了
-- カート機能→完了
-- チェックアウト機能→完了
-- 購入明細機能→完了
-- プロモーションコード機能実装→完了
+- RailsでTwitterクローンを作る→仕掛中
 
 ### 次やること
 - Rails
@@ -29,7 +22,7 @@ Total:464.1h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ChatGPT/LangChainによるチャットシステム構築［実践］入門
-- P140-
+- P140-190
 
 ゼロから作るDeep Learning②
 - P36-
@@ -40,5 +33,5 @@ ChatGPT/LangChainによるチャットシステム構築［実践］入門
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:59.8h
+Today:4.4h<br>
+Total:64.2h
