--- a/202311/26.md
+++ b/202311/26.md
@@ -22,7 +22,7 @@ Total:464.1h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ChatGPT/LangChainによるチャットシステム構築［実践］入門
-- P190-
+- P190-224
 
 ゼロから作るDeep Learning②
 - P36-
@@ -33,5 +33,5 @@ ChatGPT/LangChainによるチャットシステム構築［実践］入門
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:64.2h
+Today:4.3h<br>
+Total:68.5h
