--- a/202311/27.md
+++ b/202311/27.md
@@ -13,8 +13,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:464.1h
+Today:2.1h<br>
+Total:466.2h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -22,7 +22,7 @@ Total:464.1h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
 ChatGPT/LangChainによるチャットシステム構築［実践］入門
-- P224
+- P224-完了
 
 ゼロから作るDeep Learning②
 - P36-
@@ -33,5 +33,5 @@ ChatGPT/LangChainによるチャットシステム構築［実践］入門
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:68.5h
+Today:0.7h<br>
+Total:69.2h
