--- a/202311/28.md
+++ b/202311/28.md
@@ -24,11 +24,13 @@ Total:466.2h
 ゼロから作るDeep Learning②
 - P36-
 
+LLM調査
+
 ### 次やること
 - 上記教材
 ### 感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:69.2h
+Today:7h<br>
+Total:76.2h
