--- a/202311/29.md
+++ b/202311/29.md
@@ -3,13 +3,12 @@
 ## 200時間達成!!_2023/8/24
 ## 300時間達成!!_2023/10/4
 ## 400時間達成!!_2023/11/3
+## Rails→Pythonコースに切替_2023/11/29
 
 ### 取り組んだ課題一覧＋わかったこと
-- RailsでTwitterクローンを作る→仕掛中
+- 
 
-### 次やること
-- Rails
-### 感じたこと
+### 次やること+感じたこと
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
@@ -26,9 +25,7 @@ Total:466.2h
 
 LLM調査
 
-### 次やること
-- 上記教材
-### 感じたこと
+### 次やること+感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
