--- a/202311/29.md
+++ b/202311/29.md
@@ -12,8 +12,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:466.2h
+Today:2.3h<br>
+Total:468.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -29,5 +29,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:76.2h
+Today:4h<br>
+Total:80.2h
