--- a/202312/01.md
+++ b/202312/01.md
@@ -12,8 +12,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:469.1h
+Today:1.5h<br>
+Total:470.6h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -29,5 +29,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:87.2h
+Today:3h<br>
+Total:90.2h
