--- a/202312/02.md
+++ b/202312/02.md
@@ -6,14 +6,14 @@
 ## Rails→Pythonコースに切替_2023/11/29
 
 ### 取り組んだ課題一覧＋わかったこと
-- Python のプログラミング初心者向けの超入門講座→50%完了
+- Python のプログラミング初心者向けの超入門講座→80%完了
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:470.6h
+Today:2.2h<br>
+Total:472.8h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
