--- a/202312/02.md
+++ b/202312/02.md
@@ -24,10 +24,11 @@ Total:472.8h
 - P36-
 
 LLM調査
+- LangChainでGPT以外のモデルの呼び出しに苦戦中（AWS等の知識も必要になる）
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:90.2h
+Today:5.2h<br>
+Total:95.4h
