--- a/202312/03.md
+++ b/202312/03.md
@@ -24,11 +24,11 @@ Total:474.3h
 - P36-
 
 LLM調査
-- LangChainでGPT以外のモデルの呼び出しに苦戦中（AWS等の知識も必要になる）
+- databricksを中心に調査
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:95.4h
+Today:1.5h<br>
+Total:96.9h
