--- a/202312/04.md
+++ b/202312/04.md
@@ -6,7 +6,11 @@
 ## Rails→Pythonコースに切替_2023/11/29
 
 ### 取り組んだ課題一覧＋わかったこと
-- グループ分け問題
+- グループ分け問題→仕掛中
+- カレンダーを作る
+- ゴルフスコア判定
+- オブジェクト指向 Python 自販機問題
+- ポケモンで学ぶ！クラスとオブジェクト指向
 
 ### 次やること+感じたこと
 - 毎日続ける
