--- a/202312/05.md
+++ b/202312/05.md
@@ -6,8 +6,8 @@
 ## Rails→Pythonコースに切替_2023/11/29
 
 ### 取り組んだ課題一覧＋わかったこと
-- グループ分け問題→仕掛中
-- カレンダーを作る
+- グループ分け問題→完了
+- カレンダーを作る→仕掛中
 - ゴルフスコア判定
 - オブジェクト指向 Python 自販機問題
 - ポケモンで学ぶ！クラスとオブジェクト指向
@@ -16,8 +16,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:474.3h
+Today:1.3h<br>
+Total:475.6h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -34,5 +34,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:102.2h
+Today:7h<br>
+Total:109.2h
