--- a/202312/07.md
+++ b/202312/07.md
@@ -16,8 +16,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:475.6h
+Today:3.2h<br>
+Total:478.8h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -28,11 +28,11 @@ Total:475.6h
 - P36-
 
 LLM調査
-- streamlitでRAG_QAアプリの作成など
+- databricks調査
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:119.2h
+Today:4h<br>
+Total:123.2h
