--- a/202312/08.md
+++ b/202312/08.md
@@ -7,17 +7,17 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 - グループ分け問題→完了
-- カレンダーを作る→仕掛中
-- ゴルフスコア判定
-- オブジェクト指向 Python 自販機問題
+- カレンダーを作る→レビュー中
+- ゴルフスコア判定→レビュー中
+- オブジェクト指向 Python 自販機問題→仕掛中
 - ポケモンで学ぶ！クラスとオブジェクト指向
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:478.8h
+Today:3.6h<br>
+Total:482.4h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -34,5 +34,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:123.2h
+Today:3h<br>
+Total:126.2h
