--- a/202312/09.md
+++ b/202312/09.md
@@ -9,15 +9,15 @@
 - グループ分け問題→完了
 - カレンダーを作る→レビュー中
 - ゴルフスコア判定→レビュー中
-- オブジェクト指向 Python 自販機問題→仕掛中
-- ポケモンで学ぶ！クラスとオブジェクト指向
+- オブジェクト指向 Python 自販機問題→レビュー中
+- ポケモンで学ぶ！クラスとオブジェクト指向→仕掛中
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:482.4h
+Today:5.6h<br>
+Total:488h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
