--- a/202312/09.md
+++ b/202312/09.md
@@ -10,14 +10,14 @@
 - カレンダーを作る→レビュー中
 - ゴルフスコア判定→レビュー中
 - オブジェクト指向 Python 自販機問題→レビュー中
-- ポケモンで学ぶ！クラスとオブジェクト指向→仕掛中
+- ポケモンで学ぶ！クラスとオブジェクト指向→レビュー中
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:5.6h<br>
-Total:488h
+Today:7.5h<br>
+Total:489.9h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -34,5 +34,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:126.2h
+Today:0.4h<br>
+Total:126.6h
