--- a/202312/10.md
+++ b/202312/10.md
@@ -7,10 +7,10 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 - グループ分け問題→完了
-- カレンダーを作る→レビュー中
+- カレンダーを作る→完了
 - ゴルフスコア判定→完了
 - オブジェクト指向 Python 自販機問題→完了
-- ポケモンで学ぶ！クラスとオブジェクト指向→レビュー中
+- ポケモンで学ぶ！クラスとオブジェクト指向→完了
 
 ### 次やること+感じたこと
 - 毎日続ける
