--- a/202312/11.md
+++ b/202312/11.md
@@ -6,7 +6,8 @@
 ## Rails→Pythonコースに切替_2023/11/29
 
 ### 取り組んだ課題一覧＋わかったこと
-- 
+- 業務の都合上AWSも並行して学習する
+- 【導入編・無料】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→
 
 ### 次やること+感じたこと
 - 毎日続ける
@@ -30,5 +31,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:126.6h
+Today:6h<br>
+Total:132.6h
