--- a/202312/11.md
+++ b/202312/11.md
@@ -7,14 +7,14 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 - 業務の都合上AWSも並行して学習する
-- 【導入編・無料】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→
+- 【導入編・無料】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→仕掛中
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:493h
+Today:1h<br>
+Total:494h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
