--- a/202312/12.md
+++ b/202312/12.md
@@ -8,6 +8,7 @@
 ### 取り組んだ課題一覧＋わかったこと
 - 業務の都合上AWSも並行して学習する
 - 【導入編・無料】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→完了
+- 【前編】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→仕掛中
 
 ### 次やること+感じたこと
 - 毎日続ける
@@ -25,7 +26,7 @@ Total:494h
 - P36-
 
 LLM調査
-- databricks調査
+- databricks等調査
 
 ### 次やること+感じたこと
 - 毎日続ける
