--- a/202312/12.md
+++ b/202312/12.md
@@ -14,8 +14,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:494h
+Today:0.5h<br>
+Total:494.5h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
@@ -32,5 +32,5 @@ LLM調査
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:132.6h
+Today:4h<br>
+Total:136.6h
