--- a/202312/13.md
+++ b/202312/13.md
@@ -14,8 +14,8 @@
 - 毎日続ける
 - 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
-Today:h<br>
-Total:494.5h
+Today:0.5h<br>
+Total:495h
 
 ------------------------------------------
 # HC以外の学習：E資格取得が当面の目標
