--- a/202312/14.md
+++ b/202312/14.md
@@ -12,25 +12,22 @@
 
 ### 次やること+感じたこと
 - 毎日続ける
-- 毎月80hを超えたら機械学習・深層学習の勉強を中心に行う
 ### 学習時間
 Today:h<br>
 Total:495h
 
 ------------------------------------------
-# HC以外の学習：E資格取得が当面の目標
+# HC以外の学習：~~E資格取得が当面の目標~~→一旦休止！HCに注力！！
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
-ゼロから作るDeep Learning②
-- P36-
-
-LLM調査
+LLM調査（業務）
 - databricks等調査
+- Azure等調査
 
 ### 次やること+感じたこと
 - 毎日続ける
 - 学習ロードマップは適宜見直す
 ### 学習時間
-Today:h<br>
-Total:140.6h
+Today:4h<br>
+Total:144.6h
