--- a/202312/14.md
+++ b/202312/14.md
@@ -13,8 +13,8 @@
 ### 次やること+感じたこと
 - 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:495h
+Today:0.8h<br>
+Total:495.8h
 
 ------------------------------------------
 # HC以外の学習：~~E資格取得が当面の目標~~→一旦休止！HCに注力！！
