--- a/202312/15.md
+++ b/202312/15.md
@@ -17,7 +17,7 @@ Today:h<br>
 Total:495.8h
 
 ------------------------------------------
-# HC以外の学習：~~E資格取得が当面の目標~~→一旦休止！HCに注力！！
+# HC以外の学習：
 ## 機械学習・深層学習
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
 ### 取り組んだ課題一覧＋わかったこと
@@ -25,9 +25,14 @@ LLM調査（業務）
 - databricks等調査
 - Azure等調査
 
-### 次やること+感じたこと
-- 毎日続ける
-- 学習ロードマップは適宜見直す
 ### 学習時間
 Today:h<br>
 Total:144.6h
+
+## 英語
+### 取り組んだ課題一覧＋わかったこと
+スタサプ
+
+### 学習時間
+Today:h<br>
+Total:h
