--- a/202312/15.md
+++ b/202312/15.md
@@ -10,16 +10,14 @@
 - 【導入編・無料】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→完了
 - 【前編】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→仕掛中
 
-### 次やること+感じたこと
-- 毎日続ける
 ### 学習時間
-Today:h<br>
-Total:495.8h
+Today:2.9h<br>
+Total:498.7h
 
 ------------------------------------------
-# HC以外の学習：
-## 機械学習・深層学習
-## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)に則り進める
+# HC以外の学習
+## 機械学習・深層学習・生成AI
+## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)
 ### 取り組んだ課題一覧＋わかったこと
 LLM調査（業務）
 - databricks等調査
@@ -34,5 +32,5 @@ Total:144.6h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:h
+Today:0.8h<br>
+Total:0.8h
