--- a/202312/16.md
+++ b/202312/16.md
@@ -4,7 +4,6 @@
 ## 300時間達成!!_2023/10/4
 ## 400時間達成!!_2023/11/3
 ## Rails→Pythonコースに切替_2023/11/29
-## 500時間達成!!_2023/12/16
 
 ### 取り組んだ課題一覧＋わかったこと
 - 業務の都合上AWSも並行して学習する
@@ -24,14 +23,17 @@ LLM調査（業務）
 - databricks等調査
 - Azure等調査
 
+Qiita記事作成
+- チャットボットアプリについて
+
 ### 学習時間
-Today:h<br>
-Total:144.6h
+Today:4.5h<br>
+Total:149.1h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:0.8h
+Today:1h<br>
+Total:1.8h
